--- a/product/templates/list.html
+++ b/product/templates/list.html
@@ -10,22 +10,24 @@
             {% endfor %}
         </div>
     {% endif %}
+
     <div class="row">
         <main class="col-md-9 ml-sm-auto col-lg-10 px-4">
-            <table class="table">
-                <thead>
-                <tr>
-                    <th scope="col"></th>
-                    <th scope="col"></th>
-                    <th scope="col"></th>
-                    <th scope="col"></th>
-                    <th scope="col">محصولات</th>
-                </tr>
-                </thead>
-                <tbody>
+        <h1>محصولات</h1>
+            <div class="card-columns">
                 {% for p in products %}
-                    <tr>
-                        <td width="150px">
+                    <div class="card">
+                        <img src="/media/{{ p.photo }}" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title"><a href="/product/{{ p.product_id }}">{{ p.name }}</a></h5>
+                          <p class="card-text">
+                              {% if p.is_available %}
+                                    <span style="color: green">T{{ p.price }}</span>
+                                {% else %}
+                                    <span style="color: red">موجود نیست</span>
+                                {% endif %}
+                          </p>
+                        <p>
                             {% if p.is_available %}
                             <a onclick="$('#Modal-{{ p.product_id }}').modal('toggle')"
                                class="btn btn-primary" data-toggle="modal"
@@ -69,28 +71,12 @@
                                 </div>
                             </div>
                             {% endif %}
-                        </td>
-                        <td><img src="/media/{{ p.photo }}" height="100px"
-                                 width="130px"></td>
-                        <td>
-                            {{ p.manufacture_date }}:تولید<br>
-                            {{ p.expires_at }}:انقضا
+                        </p>
+                        </div>
 
-                        </td>
-                        <td>
-                            {% if p.is_available %}
-                                <span style="color: green">T{{ p.price }}</span>
-                            {% else %}
-                                <span style="color: red">موجود نیست</span>
-                            {% endif %}
-                        </td>
-                        <td>
-                            <a href="/product/{{ p.product_id }}">{{ p.name }}</a>
-                        </td>
-                    </tr>
+                    </div>
                 {% endfor %}
-                <tbody>
-            </table>
+            </div>
         </main>
         <nav class="col-md-2 d-none d-md-block bg-light sidebar">
             <div class="sidebar-sticky">
