--- a/product/templates/product_page.html
+++ b/product/templates/product_page.html
@@ -24,8 +24,9 @@
     .modal-header {
         direction: rtl;
     }
+
     .comment {
-    margin: 20px 0px 20px 20px;
+        margin: 20px 0px 20px 20px;
     }
 </style>
 <div class="container">
@@ -57,6 +58,26 @@
                data-target="myModal">اضافه کردن به سبد خرید</a>
             {% endif %}
         </div>
+    </div>
+    <div>
+        {% for comment in comments.all %}
+        <div class="comment">
+            <div class="date">{{ comment.created_date }}</div>
+            <strong>{{ comment.author.name }}</strong>
+            <p>{{ comment.text|linebreaks }}</p>
+        </div>
+        {% empty %}
+        <p>No comments here yet :(</p>
+        {% endfor %}
+        {% if auth%}
+        <h1>New comment</h1>
+        <form method="POST" class="post-form" action="{% url 'add_comment_to_product'  product.product_id %}">{% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="save btn btn-default">Send</button>
+        </form>
+        {% else %}
+        <h1 dir="rtl">برای ارسال نظر ابتدا باید وارد شوید.</h1>
+        {% endif %}
     </div>
 </div>
 <div id='myModal' class="modal" tabindex="-1" role="dialog">
@@ -92,14 +113,5 @@
     </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<a class="btn btn-default" href="{% url 'add_comment_to_product'  product.product_id %}">Add comment</a>
-{% for comment in comments.all %}
-    <div class="comment">
-        <div class="date">{{ comment.created_date }}</div>
-        <strong>{{ comment.author.name }}</strong>
-        <p>{{ comment.text|linebreaks }}</p>
-    </div>
-{% empty %}
-    <p>No comments here yet :(</p>
-{% endfor %}
+
 {% endblock %}
