--- a/product/templates/product_page.html
+++ b/product/templates/product_page.html
@@ -60,8 +60,9 @@
         </div>
     </div>
     <div>
+        <br><br><br>
         {% for comment in comments.all %}
-        <div class="comment">
+        <div class="comment form-group form-control" >
             <div class="date">{{ comment.created_date }}</div>
             <strong>{{ comment.author.name }}</strong>
             <p>{{ comment.text|linebreaks }}</p>
@@ -70,11 +71,18 @@
         <p>No comments here yet :(</p>
         {% endfor %}
         {% if auth%}
-        <h1>New comment</h1>
-        <form method="POST" class="post-form" action="{% url 'add_comment_to_product'  product.product_id %}">{% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit" class="save btn btn-default">Send</button>
-        </form>
+        <div class="comment form-group form-control">
+            <center><label dir="rtl">اگر درباره این محصول نظری دارید در این جا با دیگران به اشتراک بگذارید.</label></center>
+            <br>
+            <label>نویسنده: {{user.name}}</label>
+            <br>
+            <label> {{user.user.email}} :ایمیل</label>
+            <form dir="rtl" method="POST" class="post-form"
+                  action="{% url 'add_comment_to_product'  product.product_id %}">{% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit" class="save btn btn-default">ارسال نظر</button>
+            </form>
+        </div>
         {% else %}
         <h1 dir="rtl">برای ارسال نظر ابتدا باید وارد شوید.</h1>
         {% endif %}
