--- a/purchase/templates/purchase/history.html
+++ b/purchase/templates/purchase/history.html
@@ -10,6 +10,7 @@
                     <th scope="col"></th>
                     <th scope="col"></th>
                     <th scope="col"></th>
+                    <th scope="col"></th>
                     <th scope="col">تاریخچه خرید</th>
                 </tr>
                 </thead>
